# downsampling_image_transport

./: CMakeLists.txt  README.md  downsampling_plugins.xml  package.xml
cfg/: DownsamplingDyn.cfg
include/downsampling_image_transport/: downsampling_publisher.h  downsampling_subscriber.h
src/: downsampling_publisher.cpp  downsampling_subscriber.cpp  manifest.cpp
