<?xml version="1.0"?>
<package format="2">
  <name>downsampling_image_transport</name>
  <version>1.0.0</version>
  <description>down sampling image transport for ros</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <export>
    <image_transport plugin="${prefix}/downsampling_plugins.xml"/>
  </export>

</package>
